Revert "Fix top portion of thumbnails being cut off"
This reverts commit d54d470e1f5e058c8c1ea0f4e2cfb60ca33e843f.

This broke the placeholder thumbnails.

--- a/src/resources/about.css
+++ b/src/resources/about.css
@@ -292,7 +292,6 @@ html.epiphany-html {
     display: block;
     border: 1px solid #ccc;
     background: url(ephy-resource:///org/gnome/epiphany/web-watermark.svg) center no-repeat, #fff;
-    background-position: top;
     background-repeat: no-repeat;
     border-radius: 5px;
 }
